--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'Pagely Deploy to VPS'
-description: 'Deploy to your Pagely apps'
+name: 'Pagely Deploy'
+description: 'Deploy apps to your Pagely VPS'
 inputs:
   PAGELY_DEPLOY_DEST:
     description: 'Set the subdirectory to deploy to examples: /httpdocs, /httpdocs/wp-content/plugins/my-plugin, /app'
@@ -14,9 +14,9 @@ inputs:
     description: 'Id of the app you want to deploy to, available in Atomic'
     required: true
   PAGELY_WORKING_DIR:
-    description: 'A file, directory or wildcard pattern that describes what to upload see https://github.com/actions/toolkit/tree/main/packages/glob'
-    default: "$pwd"
+    description: 'The directory that you want deployed, based on the build files path. i.e. $GITHUB_WORKSPACE'
+    default: "$(pwd)"
     required: false
 runs:
   using: 'docker'
-  image: 'docker://mltealpagely/deploy-to-pagely:latest'
+  image: 'docker://pagely/pagely-vps-deploy:1.11'
